kube/explorer/explorer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: explorer-ingress
  namespace: ${KUBE_NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: explorer.${DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: explorer
                port:
                  number: 8080
